# cpp-project-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.py
.conan/profiles/: profile.jinja
.github/: coverage.sh  include-what-you-use.sh
.github/workflows/: build.yml  codeql-analysis.yml  coverage.yml  linters.yml  workflow.yml
include/: CMakeLists.txt
include/cpp-project-template/error/: disable_warning.h
include/include/error/: disable_warning.h
lib/: CMakeLists.txt
lib/lib-template/: CMakeLists.txt
lib/lib-template/include/lib_template/: lib_template.h
lib/lib-template/src/: lib_template.cpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt
test/benchmark/benchmark-template/: CMakeLists.txt  main.cpp
test/benchmark/benchmark_example/: CMakeLists.txt  main.cpp
test/benchmark/benchmark_template/: CMakeLists.txt
test/unittest/: CMakeLists.txt
test/unittest/test-template/: CMakeLists.txt  main.cpp
test/unittest/test_example/: CMakeLists.txt  main.cpp
test/unittest/test_template/: CMakeLists.txt
